<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.ui.fragments.AddBookFragment">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:autofillHints="@string/addNewBook_BookName"
                android:id="@+id/editTextBookTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/addNewBook_BookName"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextBookAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/addNewBook_BookAuthor"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/addNewBook_BookAuthor"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextBookPublishingHouse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints="@string/addNewBook_BookPublishingHouse"
                android:ems="10"
                android:hint="@string/addNewBook_BookPublishingHouse"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextBookPages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints="@string/addNewBook_BookPages"
                android:ems="10"
                android:hint="@string/addNewBook_BookPages"
                android:inputType="number" />

            <EditText
                android:id="@+id/editTextBookResume"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="@string/addNewBook_BookResume"
                android:ems="10"
                android:hint="@string/addNewBook_BookResume"
                android:inputType="text|textMultiLine" />

            <Button
                android:id="@+id/buttonSubmitBook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addNewBook_BookSubmitButton" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </FrameLayout>
</layout>